--- a/index.html
+++ b/index.html
@@ -6,25 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+  <body id = "main">
 
     <h1>Hello World! we are software developers</h1>
 
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script  src="js/index.js"></script>
   </body>
 </html>
