--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
   <body id = "main">
 
-    <h1>Hello World! we are software developers</h1>
+
+
+    <h1 id="title">Dr. Norman Borlaug</h1>
+
+
+    <img src="pic_trulli.jpg" alt="Italian Trulli" id="img-div">
 
   </body>
 </html>
