--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <h1 id="title">Dr. Norman Borlaug</h1>
 
-
-    <img src="pic_trulli.jpg" alt="Italian Trulli" id="img-div">
-
+    <div id="img-div">
+      <img src="https://ichef.bbci.co.uk/news/624/cpsprodpb/E180/production/_106282775_gettyimages-515395982.jpg" alt="Italian Trulli" id="image">
+    </div>
   </body>
 </html>
