--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 
     <h1 id="title">Dr. Norman Borlaug</h1>
+    <p id="tribute-info">The man who saved a billion lives</p>
 
     <div id="img-div">
       <img src="https://ichef.bbci.co.uk/news/624/cpsprodpb/E180/production/_106282775_gettyimages-515395982.jpg" alt="Italian Trulli" id="image">
+      <p id="img-caption">Dr. Norman Borlaug is so happy :)</p>
     </div>
   </body>
 </html>
