--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
       <img src="https://ichef.bbci.co.uk/news/624/cpsprodpb/E180/production/_106282775_gettyimages-515395982.jpg" alt="Italian Trulli" id="image">
       <p id="img-caption">Dr. Norman Borlaug is so happy :)</p>
     </div>
+
+    <a id="tribute-link" target="_blank" href="https://www.nobelprize.org/prizes/peace/1970/borlaug/biographical/" class="imageResponsive">Click here to get his bio!</a>
   </body>
 </html>
