--- a/index.html
+++ b/index.html
@@ -10,14 +10,31 @@
 
 
 
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+
     <h1 id="title">Dr. Norman Borlaug</h1>
     <p id="tribute-info">The man who saved a billion lives</p>
 
-    <div id="img-div">
-      <img src="https://ichef.bbci.co.uk/news/624/cpsprodpb/E180/production/_106282775_gettyimages-515395982.jpg" alt="Italian Trulli" id="image">
+    <div id="img-div" >
+      <img class = "img-responsive" src="https://ichef.bbci.co.uk/news/624/cpsprodpb/E180/production/_106282775_gettyimages-515395982.jpg" alt="Italian Trulli" id="image">
       <p id="img-caption">Dr. Norman Borlaug is so happy :)</p>
     </div>
 
     <a id="tribute-link" target="_blank" href="https://www.nobelprize.org/prizes/peace/1970/borlaug/biographical/" class="imageResponsive">Click here to get his bio!</a>
+
+
+        <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
   </body>
 </html>
