Text alignment: center workingclear :)

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
     <img class="imageResponsive"
       src="https://ichef.bbci.co.uk/news/624/cpsprodpb/E180/production/_106282775_gettyimages-515395982.jpg"
       alt="Italian Trulli" id="image">
+      <br>
+      
     <p id="img-caption">Dr. Norman Borlaug is so happy :)</p>
   </div>
     
-  <div class="text-center col-md-6">
+  <div class="col-md-6 container">
     <div class="col-md-12">
-      <h2>Here's a time line of Dr. Borlaug's life:</h2>
+      <h2 class="text-center">Here's a time line of Dr. Borlaug's life:</h2>
       <ul>
         <li><strong>1914 -</strong> Born in Cresco, Iowa</li>
         <li><strong>1933 -</strong> Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
